KOGITO-5203 Validate use of onEntry and onExit scripts (#1542)